--- a/css/app.css
+++ b/css/app.css
@@ -86,3 +86,19 @@ body {
 	-ms-transform: rotate(325deg);
 	transform: rotate(325deg);
 }
+
+
+@media (max-width: 600px){
+	body {
+		background-size: auto 100%;
+	}
+	.content,
+	.lapis {
+		width: 100%;
+		height: 100vh;
+		margin: 0;
+		top: 0;
+		left: 0;
+		background-size: 100%;
+	}
+}
